[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recovery-factor"
version = "0.1.0"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "hyperopt",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "ray[tune]",
  "shap",
  "scikit-learn",
  "seaborn",
  "statsmodels",
  "xgboost",
  "xlrd",
  "yellowbrick",
  "openpyxl",
  "thefuzz[speedup]",
  "tune-sklearn",
]

[project.scripts]
rf-train = "recovery_factor.train:main"


[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit", "ipykernel"]


[tool.black]
line-length = 99
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "99"

[tool.ruff]
select = [
  "E",
  "F",
  "W",    # flake8
  "B",
  "B904", # flake8-bugbear
  "I",    # isort
  "ARG",  # flake8-unused-arguments
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
  "RET504", # 'unnecessary' variable assignment before return statement
]
line-length = 99
target-version = "py37"
unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"noxfile.py" = ["T", "T201"]
"tests/**.py" = ["D101", "D102", "D103"]
